@@ -219,11 +219,11 @@ class Mappings
             DataType::Customer => [
             ],
             AddressType::Invoice => [
-                Fld::CountryCode => '[source::getCountryCode()]',
+                Fld::CountryCode => '[source::getCountryCode()|"nl"]',
                 Meta::AddressType => AddressType::Invoice,
             ],
             AddressType::Shipping => [
-                Fld::CountryCode => '[source::getCountryCode()]',
+                Fld::CountryCode => '[source::getCountryCode()|"nl"]',
                 Meta::AddressType => AddressType::Shipping,
             ],
             EmailAsPdfType::Invoice => [
