@@ -7,7 +7,11 @@ namespace Siel\Acumulus\Data;
 /**
  * AddressType defines the possible address types.
  *
- * PHP8.1: enumeration.
+ * An address type is used for 2 features:
+ * - To define the type of address collected: invoice or shipping.
+ * - To define the type of address used for tax calculations: store, invoice, or shipping.
+ *
+ * @nth: PHP8.1: enumeration.
  */
 interface AddressType
 {
